--- a/templates/admin/groups/list.html
+++ b/templates/admin/groups/list.html
@@ -1,14 +1,23 @@
 <div class="row subHeader">
-  <div class="currentApp">
-    <h2 class="page-title">
-     <!--  <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
-      {{active_app.label}}
-    </h2>
-  </div>
+    <div class="currentApp">
+       <div class="btn-group">
+           <a class="filterItem" href="#" data-toggle="dropdown" >
+            {{active_app.label}}
+            <i class="icon-angle-down"></i>
+           </a>
+           <ul class="dropdown-menu">
+            {%for application in apps %}
+
+                  <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal">{{application.label}}</a></li>
+
+            {%endfor%}
+           </ul>
+        </div>
+    </div>
   <div class=" subHeaderContent">
-    <div class="pull-right sharebuttonDiv" ng-show="!blankStateaccount"> 
-      
-      
+    <div class="pull-right sharebuttonDiv" ng-show="!blankStateaccount">
+
+
     </div>
     <h2 class="page-title">{{ _("Groups") }} </h2>
   </div>
@@ -20,11 +29,11 @@
             Loading...
           </div>
         </div>
-        
+
   </div>
   <div ng-show="immediateFailed">
-    <div class="col-md-12">  
-       
+    <div class="col-md-12">
+
       <span id="signin">
         <span id="myGsignin"></span>
       </span>
@@ -33,7 +42,7 @@
   <div class="row" ng-show="isSignedIn">
     <div class="col-md-9">
       <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red newBtn">
-        {{ _("New Group") }} 
+        {{ _("New Group") }}
       </button>
     </div>
     <div class="col-md-9">
@@ -57,7 +66,7 @@
                   </div>
                   <div class="pitch">
 
-                    
+
                   </div>
                 </div>
                 <div class="clearfix"></div>
@@ -74,26 +83,26 @@
          <div class="modal-dialog">
          <div class="modal-content">
               <div class="modal-header">
-                
+
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
                         <h3 id="myModalLabel">{{_("New Group")}}</h3>
               </div>
               <div class="modal-body">
-                 <form id="addAccount" name="addaccount"  class="form-horizontal"> 
+                 <form id="addAccount" name="addaccount"  class="form-horizontal">
                   <fieldset>
-                  
-                   
+
+
 
                     <div class="form-group">
                         <!--label  class="required control-label">{{_("Group Name")}} *</label-->
-                       
+
                     <input type="text" class="form-control" placeholder="{{ _('Group Name') }}" required required id="id_name" ng-model="group.name" >
-                          
-                       
+
+
                     </div>
-                    
+
                     </fieldset>
-                
+
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
@@ -127,8 +136,8 @@
         }
     }
     handleUniform();
-   $('.waterfall').waterfall({ 
-        colMinWidth: 210, 
+   $('.waterfall').waterfall({
+        colMinWidth: 210,
         defaultContainerWidth: 800,
         autoresize: true
   });
