--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -1,11 +1,19 @@
-
 <div class="row subHeader">
     <div class="currentApp">
-       <h2 class="page-title">
-       {{active_app.label}}
-       <!--  <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
-      </h2>
-    </div> 
+       <div class="btn-group">
+           <a class="filterItem" href="#" data-toggle="dropdown" >
+            {{active_app.label}}
+            <i class="icon-angle-down"></i>
+           </a>
+           <ul class="dropdown-menu">
+            {%for application in apps %}
+
+                  <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal">{{application.label}}</a></li>
+
+            {%endfor%}
+           </ul>
+        </div>
+    </div>
     <div class=" subHeaderContent">
       <div class="col-md-9">
       <div class="row">
@@ -43,7 +51,7 @@
       </div>
       <div class="col-md-2 col-xs-2">
       <a href="/#/opportunities/new" class="btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
-           New <span class="hidden-xs hiddenOnxs">Opportunity</span> 
+           New <span class="hidden-xs hiddenOnxs">Opportunity</span>
          </a>
       </div>
       </div>
@@ -82,9 +90,9 @@
         </div>
      <div class="col-md-3 col-sm-3 col-xs-3">
         <div class="row">
-         <div class="pull-right" > 
+         <div class="pull-right" >
            <a href="/#/opportunities/new" class="btn red newBtn">
-                        {{ _('New Opportunity') }} 
+                        {{ _('New Opportunity') }}
           </a>
          </div>
          </div>
@@ -109,12 +117,12 @@
                           </div>
                           <div class="col-md-8 col-xs-8">
                             <div class="oppDescription row">
-                                    <a href="/#/opportunities/show/<%= opportunity.id %>" title="<%= opportunity.name %>"><h4 style="height:26px" class="fittext ellipsis" min-font-size="14" max-font-size="22"  text="opportunity.name">                                    
+                                    <a href="/#/opportunities/show/<%= opportunity.id %>" title="<%= opportunity.name %>"><h4 style="height:26px" class="fittext ellipsis" min-font-size="14" max-font-size="22"  text="opportunity.name">
                                       <span class="fittext" max-font-size="18"  text="opportunity.name"></span>
                                     </h4></a>
-                                    
+
                             </div>
-                            <div class="oppDetails col-md-12">    
+                            <div class="oppDetails col-md-12">
                                     <div class="oppPrice">
                                       <span><%= opportunity.currency %> <%= opportunity.amount_total | customCurrency:"":",":".":0 %></span>
                                       <div>
@@ -122,9 +130,9 @@
                                         with <a href="/#/accounts/show/<%= opportunity.account.id %>">
                                            <%= opportunity.account.name %>
                                         </a>
-                                      </span> 
+                                      </span>
                                       </div>
-                                        
+
                                       <p class="amount-details" ng-show="opportunity.duration_unit!='fixed'">
                                           <%= opportunity.duration %> × <%= opportunity.amount_per_unit | customCurrency:"":",":".":0 %>/<%= opportunity.duration_unit %>
                                       </p>
@@ -135,7 +143,7 @@
                                     </div>
                             </div>
                           </div>
-                          
+
                     </div>
                   <div class="tagsSection" ng-class="{hidden: opportunity.tags==null}">
                       <div class="sectionContent">
