before pull form iogrow master
Former-commit-id: fe2bcbffb369d54d8c2a9b383c6b7eb04369bc5f [formerly 365e0a30f1c1df9ac926e71954b00783b19ed462] [formerly d4da3c54298c81ddde8495eaa1c9be8a321668d0 [formerly 4fe44d4fa3a18f849077d5552c7b1da4f7a22060]]
Former-commit-id: ffc77d3b9347e7092846bae08e1fdfcdd21b2c41 [formerly 2f7de0aa0c28137fa3538e287d6bdbb956803c5a]
Former-commit-id: 0c1cf2c1a75b88e669a984f07499bb5e0d34c110

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -357,6 +357,13 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-12">
+                        <div id="gSignInWrapper" align="center" class="visible-xs visible-sm ">
+                            <div id="customBtn" class="customGPlusSignIn">
+                              <a href="/early-bird">
+                              <span class="icon"></span>
+                              <span class="buttonText">Start using ioGrow for free!</span></a>
+                            </div>
+                          </div>
                         <h1>Grow and Manage your relationships with the right people!</b></h1>
                         <h3><b>The next generation of Google Contacts</b></h3>
                         <br>
