--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="">
         <meta name="author" content="Daniely Wright">
         <link href="/static/welcome/ico/favicon.png" rel="shortcut icon" >
-        <title>ioGrow - CRM for startups, it's on Google and it just works</title>
+        <title>ioGrow - The next generation of Google Contacts</title>
 
         <!-- Bootstrap core CSS -->
         <link href="/static/welcome/css/bootstrap.min.css" rel="stylesheet">
@@ -205,7 +205,6 @@
                     <ul class="nav navbar-nav cl-effect-13">
                         <li class="active"><a href="#home" class="smoothScroll" <a href="#home" class="smoothScroll">Home</a></li>
                         <li><a href="#features" class="smoothScroll">Features</a></li>
-                        <li><a href="#pricing" class="smoothScroll">Pricing</a></li>
                         <li><a href="#contact" class="smoothScroll">Contact</a></li>
                     </ul>
 
@@ -363,8 +362,8 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-12">
-                        <h1>The next generation of Google Contacts</b></h1>
-                        <h3><b>Grow and Manage your relationships with the right people!</b></h3>
+                        <h1><b>The next generation of Google Contacts</b></h1>
+                       
                         <br>
                     </div>
 
@@ -565,7 +564,7 @@ A clean, simple interface that collect all your customer's data, can dramaticall
 
 
         <!-- Pricing Section -->
-        <section id="pricing" name="pricing"></section>
+        <section id="signup" name="signup"></section>
         <div id="pricingwrap">
             <div class="container text-center">
                 <div class="row">
@@ -641,6 +640,17 @@ A clean, simple interface that collect all your customer's data, can dramaticall
                 interval: 3500,
                 pause: "none"
             })
+        </script>
+
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-52188380-1', 'iogrow.com');
+          ga('send', 'pageview');
+
         </script>
 
     </body>
